# hypeprooflab

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  research_jay_20260121.,d
.claude/: settings.json
.claude/agents/moai/: manager-git.md
.moai/config/: config.yaml
.moai/config/sections/: project.yaml  user.yaml
.moai/project/: product.md  structure.md  tech.md
action_items/2026/01_january/: week_03.md
config/: agents.yaml  settings.yaml
content/: topic_pool.md
docs/: ai_agent_system.md  architecture.md
docs/operating_system/: os_ver_2.1.md
meeting_notes/: Weekly on HyperProof - 2026_01_19 21_27 KST - Notes by Gemini.md
members/Jay/: profile.md
members/Kiwon/: profile.md
members/TJ/: profile.md
members/지웅/: profile.md
members/진용/: profile.md
research/claims/: _index.md
research/lens/: labeling_guide.md
research/openclaw/: 2026-02-03-v2.md  2026-02-03.md  PROCESS.md  claude-opus-4.6-alignment-concerns.md  claude-opus-4.6-system-card.md  claude-opus-4.6-v2.md  claude-opus-4.6-v3.md
src/agents/: analysis_agent.py  base_agent.py  research_agent.py  writing_agent.py
src/commands/: __init__.py  research.py
src/core/: config_loader.py  error_handler.py  logger.py  registry.py  types.py
templates/: action_item_weekly.md  claim_card.md  episode_prep.md  light_runsheet.md
tests/: conftest.py
tests/test_agents/: test_analysis_agent.py  test_research_agent.py
tests/test_commands/: test_research.py
tests/test_core/: test_config_loader.py  test_error_handler.py  test_registry.py  test_types.py
web/: LANDING_PAGE_IMPROVEMENT.md  package-lock.json  package.json
web/src/app/: globals.css  (+2 more)
workflows/: feedback.md
(+4 files in other folders)
